--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "rewrites": [
     { "source": "/betaad", "destination": "/betaad.html" }
+    { "source": "/test", "destination": "/test.html" }
   ]
 }
