--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-    { "source": "/betaad", "destination": "/betaad.html", "source": "/test", "destination": "/test.html" }
+    { "source": "/betaad", "destination": "/betaad.html", "source": "/test", "destination": "/test.html", "source": "/beta", "destination": "/beta.html", "source": "/betaad", "destination": "/betaad.html", "source": "/index", "destination": "/index.html", "source": "/admin", "destination": "/admin.html" }
   ]
 }
